# hercules

./: README.md  build.sh  index.html  package-lock.json  package.json  push.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: actions.rs  metrics.rs  mod.rs  processes.rs
src-tauri/src/models/: metrics.rs  mod.rs  process.rs
src-tauri/src/platform/: detect.rs  mod.rs
src/components/layout/: Layout.css  Layout.tsx  Sidebar.css  Sidebar.tsx  Titlebar.css  Titlebar.tsx
src/components/metrics/: CpuCores.css  CpuCores.tsx  MetricCard.css  MetricCard.tsx
src/components/processes/: ProcessTable.css  ProcessTable.tsx
src/components/welcome/: WelcomeModal.css  WelcomeModal.tsx
src/hooks/: useMetrics.ts  usePlatform.ts  useProcesses.ts
src/pages/: Actions.css  Actions.tsx  Dashboard.css  Dashboard.tsx  Processes.css  Processes.tsx
src/store/: appStore.ts
src/types/: actions.ts  metrics.ts  process.ts
