[package]
name = "hercules"
version = "0.1.0"
description = "Hércules — Monitor y optimizador del sistema"
authors = ["danimnr"]
edition = "2021"

[lib]
name = "hercules_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
